Replace ImmutableMap and ImmutableSet with Map and Set in OreScannerActivateEvent